# kitty-tabs-recover

./: .gitignore  README.md  pyproject.toml
contrib/systemd/: kitty-tabs-recover.service
scripts/: ktr  reopen
src/kitty_tabs_recover/: __init__.py  cli.py  commands.py  hyprland.py  kitty.py  names.py  paths.py  popup.py  session.py  snapshot.py  tui.py
tests/: test_core.py
